test/negative/missing_size_specifier_decimal_constant.net
INPUT
OUTPUT b
VAR b
IN
b = 0d0
